--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -87,7 +87,7 @@ http://www.tbi.univie.ac.at/\raisebox{-0.9ex}{\~{ }}wash/RNAz
 \vspace*{0.9\textheight}
 
 \begin{center}
-  \$Id: manual.tex,v 1.2 2006-03-24 17:56:08 wash Exp $\ $\$
+  \$Id: manual.tex,v 1.2 2006/03/24 17:56:08 wash Exp $\ $\$
 \end{center}
 
 
