Checking-in Andreas' RNAz 2.0 branch.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Stefan Washietl <wash@tbi.univie.ac.at>
+Andreas Gruber <agruber.tbi.univie.ac.at>
 Ivo Hofacker <ivo@tbi.univie.ac.at.at>
 Kristin Missal <missal@bionf.uni-leipzig.de>
